--- a/container.yml
+++ b/container.yml
@@ -1,22 +1,18 @@
 ---
 
 - hosts: localhost
-  connection: local
   become: true
-  vars:
-    ansible_python_interpreter: /usr/bin/python3
   tasks:
   - name: "build docker image"
     docker_image: 
         name: custonginx
-        tag: latest
         path: docker
         state: present
 
   - name: "launch_container"
     docker_container: 
         name: custocontainer
-        image: custonginx:latest
+        image: custonginx
         state: started
         ports: 
           - "9088:80"
